more accuracy in tests